Added endpoint to get remaining requests
Even if deprecated, it works
